<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Body Systems Quiz</string>
    <string name="header">How much do you know about body systems?</string>
    <string name="subHeader">Put your knowledge to the test!  Answer each question below.</string>
    <string name="textEditor">enter your name here</string>
    <string name="q1">1. The skin, or _______________ system, is the body\'s largest organ</string>
    <string name="q2">2. Which of the following is NOT a type of muscle?</string>
    <string name="q3">3.  There is one sphincter muscle in the urinary system.</string>
    <string name="q4">4. Which of the following does NOT belong to the female reproductive system?</string>
    <string name="q5">5. The endocrine system consists of ___ major glands that secrete hormones into the blood.</string>
    <string name="q1a1">Lymphatic</string>
    <string name="q1a2">integumentary</string>
    <string name="q1a3">respiratory</string>
    <string name="q2a1">skeletal</string>
    <string name="q2a2">cardiac</string>
    <string name="q2a3">voluminoid</string>
    <string name="q2a4">femular</string>
    <string name="q3a1">true</string>
    <string name="q3a2">false</string>
    <string name="q4a1">uvula</string>
    <string name="q4a2">testes</string>
    <string name="q4a3">vagina</string>
    <string name="q4a4">ovaries</string>
    <string name="q5a1">six</string>
    <string name="q5a2">ten</string>
    <string name="q5a3">eight</string>
    <string name="q5a4">fifteen</string>
    <string name="q1correct">correct</string>
    <string name="q2correct">correct</string>
    <string name="q3correct">correct</string>
    <string name="q4correct">correct</string>
    <string name="q5correct">correct</string>
    <string name="q1score">0</string>
    <string name="q2score">0</string>
    <string name="q3score">0</string>
    <string name="q4score">0</string>
    <string name="q5score">0</string>
    <string name="results">Get Results</string>
    <string name="resetScore">Reset</string>
    <string name="totalScore">0</string>
    <string name="name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="your_score">You Scored: </string>
</resources>
